atualizando as imagens das demais seções

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque repudiandae tenetur quae deserunt, maiores enim! Aliquam fugiat quae asperiores animi modi eligendi reprehenderit! Libero ad ipsam, tempora ducimus sequi expedita.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front=end">
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
         </div>
     </section>
     <section class="event event--ui-ux event--image-left">
@@ -59,7 +59,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque repudiandae tenetur quae deserunt, maiores enim! Aliquam fugiat quae asperiores animi modi eligendi reprehenderit! Libero ad ipsam, tempora ducimus sequi expedita.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front=end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -70,7 +70,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque repudiandae tenetur quae deserunt, maiores enim! Aliquam fugiat quae asperiores animi modi eligendi reprehenderit! Libero ad ipsam, tempora ducimus sequi expedita.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front=end">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -81,7 +81,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque repudiandae tenetur quae deserunt, maiores enim! Aliquam fugiat quae asperiores animi modi eligendi reprehenderit! Libero ad ipsam, tempora ducimus sequi expedita.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front=end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
